--- a/index (2).html
+++ b/index (2).html
@@ -11,7 +11,7 @@
     <header>
        <div class="user">
        <img src="photo.jpg">
-       <h5 class="nm">Blessian D Jutike</h5>
+       <h5 class="nm">Yatin Ganesh Naik</h5>
        <p class="jb">Student</p>
        </div>
        <nav class="nv">
@@ -27,11 +27,11 @@
         <h1 class="heading"><span>Details about me</span></h1>
         <div class="Row">
         <div class="det">
-             <h3><span>Name: </span>Blessian D Jutike</h3>
-             <h3><span>Age: </span>30</h3>
-             <h3><span>Gender: </span>Female</h3>
-             <h3><span>Email: </span>blessi000@hmail.com</h3>
-             <h3><span>Phone_no: </span>9875555555</h3>    
+             <h3><span>Name: </span>Yatin Ganesh Naik</h3>
+             <h3><span>Age: </span>24</h3>
+             <h3><span>Gender: </span>Male</h3>
+             <h3><span>Email: </span>yatinaik12@gmail.com</h3>
+             <h3><span>Phone_no: </span>9380950234</h3>    
         </div>
     </div>
     </section>
@@ -46,21 +46,21 @@
         </tr>
         <tr>
             <td>SSCL</td>
-            <td>William Richards High School</td>
+            <td>R.N.Shetty english vidyaniketan school</td>
             <td>KSEEB</td>
-            <td>70</td>
+            <td>66</td>
         </tr>
         <tr>
-            <td>Diploma</td>
-            <td>Govt Polyechnic Immadihalli</td>
+            <td>P.U</td>
+            <td>Sidhartha P.U collage</td>
             <td>DTE</td>
-            <td>68</td>
+            <td>64.08</td>
         </tr>
         <tr>
             <td>BE</td>
-            <td>New Horizon College</td>
+            <td>Shree Devi Institute Of technology College</td>
             <td>VTU</td>
-            <td>60</td>
+            <td>63</td>
         </tr>
     </table>
 </section>
@@ -70,37 +70,13 @@
     <div>
     <ul id="lis">
         <li>Java</li>
-        <li>C++</li>
         <li>HTML</li>
         <li>CSS</li>
         <li>JavaScript</li>
-        <li>Angular</li>
         <li>Oracle</li>
         <li>MySQL</li>
-        <li>Python</li>
-        <li>Manual Testing</li>
-        <li>Automation Testing</li>
-        <li>Data Structures</li>
     </ul>
-</div>
-</section>
-<section class="Project" id="Project">
-    <h1 class="heading"><span>Project</span></h1>
-    <div class="Row">
-        <div class="det">
-    <h3><span>Role: </span>Team member</h3>
-    <h3><span>Title: </span>Eye state detection of driver</h3>
-    <h3><span>Description: </span>Developing intelligent systems to prevent accidents
-                can be bery effective in minimizingaccident death toll. 
-                Drivers fatigue is one of the major causes of traffic 
-                accidents,particularly for drivers of large vehicles
-                (such as buses and heavy trucks)due to prolonged driving
-                in working conditions. This project detects the signs of 
-                fatigue and sleepiness in the face of the person at the 
-                time of driving in this model, the person's face is filmed 
-                by a camera in the first step by receiving video sequence, 
-                the level of drowsiness is detected.</h3>
-            </div>
+
 </div>
 </section>
 </body>
